# memvox

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml  shim.py
memvox/: __main__.py  _rust.pyi
memvox-audio/: Cargo.toml
memvox-audio/src/: barge_in.rs  egress.rs  ingress.rs  ipc.rs  main.rs
memvox-rs/: Cargo.toml
memvox-rs/src/: lib.rs  sentence_acc.rs
memvox/observability/: metrics.py
memvox/session/: orchestrator.py  types.py
memvox/skins/: korean_tutor.py
memvox/voice/: asr.py  egress.py  ingress.py  llm.py  tts.py  types.py
memvox/wiki/: store.py  types.py
tests/integration/: test_socket_roundtrip.py
tests/unit/: test_asr.py  test_egress.py  test_ingress.py  test_llm.py  test_orchestrator.py  test_tts.py
