[package]
name = "memvox-audio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memvox-audio"
path = "src/main.rs"

[dependencies]
# Audio I/O — mic capture and speaker playback on real-time OS threads
cpal = "0.15"
# Resampling — TTS 24 kHz → device native rate (typically 48 kHz)
rubato = "0.16"
# Silero VAD ONNX inference — uncomment when swapping out energy VAD in ingress.rs
# ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }
# ndarray = "0.16"
# Async runtime — drives IPC and coordination tasks (not audio threads)
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "io-util", "time", "macros", "signal"] }
# IPC wire format
bincode = "1"
serde = { version = "1", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1"
